# ASAD

./: .asad.hist  .gitignore  BUILD.txt  CNAME  README.md  README.txt  asad.py  build.py  default.conf  freeze.py  index.html  params.json  requirements.txt  setup.py  test.py  test.sh  update.sh  update_and_build.sh
asad/: args.py  config.py  interactive.py  libasad.py  plot.py  pyasad.py  wizard.py
asad-cpp/: CMakeLists.txt  Makefile  asad.cpp  asad.h  asad.h~  build.sh  main.cpp
asad-cpp/include/asad/: asad.h  base.h  includes.h  math.h
asad-cpp/src/: base.cpp  math.cpp
data/objects/: NEWNGC1711.txt_smoothed_model.txt_09_41_19+29-08-15  NEWNGC1984.txt_smoothed_model.txt_09_41_18+29-08-15
data/observations/: NEWNGC1711.txt  NEWNGC1984.txt
script/: alldir.run  interactive.run  padova.run
templates/: residual_match.gplot  test.eps
util/: column.py  git_build.sh  model_plot.py
